<resources>
    <string name="app_name">Matcheron</string>
    <string name="perfectly_matched">Perfectly Matched</string>
    <string name="login">Login</string>
    <string name="join">Join</string>
    <string name="is_live_join_today_and_discover_your_soulmate">is live Join today and discover your soulmate!</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="free_signup">Free Signup</string>
    <string name="by_proceeding_to_use_matcheron_you_agree_to_our_terms_and_privacy_policy">By proceeding to use Matcheron, you agree to our <annotation action="term">Terms</annotation> and <annotation action="privacy">Privacy Policy</annotation></string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_is_required">Email is required</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="password_is_required">Password is required</string>
    <string name="free_express_sign_up">FREE EXPRESS SIGN-UP</string>
    <string name="strictly_confidential">Strictly Confidential</string>
    <string name="only_first_name_is_displayed">Only First name is displayed</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="both">Both</string>
    <string name="seeking">Seeking</string>
    <string name="goal">Goal</string>
    <string name="religion">Religion</string>
    <string name="pairing">Pairing</string>
    <string name="exclusive">Exclusive</string>
    <string name="open">Open</string>
    <string name="select_exclusive_to_match_solely_within_your_religion_or_open_if_you_are_open_to_all">Select \'Exclusive\' to match solely within your religion or \'Open\' if you are open to all.</string>
    <string name="next">Next</string>
    <string name="sign_up_des">Upon submission, the profile is reviewed before going live on the app. Matcheron will delete explicit photos and permanently ban the user from the site. No fake or spam submissions. We track your IP address, which will be blocked forever if you abuse the free sign up</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="feet_inches">(Feet/Inches)</string>
    <string name="weight">Weight</string>
    <string name="pounds">Pounds</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile">Mobile</string>
    <string-array name="status">
        <item>Select</item>
        <item>Single</item>
        <item>Marries</item>
        <item>Widowed</item>
        <item>Divorced</item>
        <item>Separated</item>
        <item>Other</item>
    </string-array>
    <string name="country">Country</string>
    <string name="united_states">United States</string>
    <string name="state_province">State/Province</string>
    <string name="profession">Profession</string>
    <string name="enter_profession">Enter Profession</string>
    <string name="comments">Comments:</string>
    <string name="terms">Terms</string>
    <string name="matcheron_app_terms_and_guidelines">MATCHERON App: Terms and Guidelines</string>
    <string name="term_des_1">At MATCHERON, we promote a respectful, inclusive environment. Please follow these guidelines to ensure a positive experience:</string>
    <string name="no_hate_speech">No Hate Speech</string>
    <string name="term_des_2">No hate, discrimination, or hostility towards any individual or group based on religion, ethnicity, gender, or any characteristic.</string>
    <string name="authentic_profiles_only">Authentic Profiles Only</string>
    <string name="term_des_3">Create genuine profiles with accurate information. Fake profiles or impersonation will result in account deletion and a permanent ban.</string>
    <string name="real_profile_photos">Real Profile Photos</string>
    <string name="term_des_4">Use clear, appropriate profile photos that accurately represent your current appearance.</string>
    <string name="respectful_communication">Respectful Communication</string>
    <string name="term_des_5">All interactions must be respectful, courteous, and considerate, promoting understanding and harmony.</string>
    <string name="cordial_behavior">Cordial Behavior</string>
    <string name="term_des_6">Behave in a friendly, polite manner. Insults, offensive language, and disrespect will not be tolerated.</string>
    <string name="cultural_sensitivity">Cultural Sensitivity</string>
    <string name="term_des_7">Respect cultural differences and avoid making assumptions about others\' beliefs or backgrounds.</string>
    <string name="no_harassment">No Harassment</string>
    <string name="term_des_8">Harassing, stalking, or repeatedly bothering users is strictly prohibited.</string>
    <string name="no_inappropriate_content">No Inappropriate Content</string>
    <string name="term_des_9">Do not share explicit or offensive content, including images, memes, or language.</string>
    <string name="no_solicitation_or_spam">No Solicitation or Spam</string>
    <string name="term_des_10">The app should not be used for commercial purposes, such as promoting products or services, soliciting donations, or offering escort services. Spamming other users with unsolicited messages is not allowed.</string>
    <string name="positive_engagement">Positive Engagement</string>
    <string name="term_des_11">Contribute constructively and share insights that foster a supportive community.</string>
    <string name="reporting_violations">Reporting Violations</string>
    <string name="term_des_12">Report any violations to moderators with details for prompt action.</string>
    <string name="no_religious_insensitivity">No Religious Insensitivity</string>
    <string name="term_des_13">Respect all religious beliefs and avoid derogatory or insensitive comments.</string>
    <string name="privacy_and_safety">Privacy and Safety</string>
    <string name="term_des_14">Do not share personal details publicly. Prioritize your privacy.</string>
    <string name="age_restrictions">Age Restrictions</string>
    <string name="term_des_15">Follow age restrictions; minors should not engage in inappropriate interactions.</string>
    <string name="no_political_agenda">No Political Agenda</string>
    <string name="term_des_16">Avoid political debates unrelated to the app\'s purpose.</string>
    <string name="violation_consequences">Violation Consequences</string>
    <string name="term_des_17">Violating these guidelines may result in profile removal and a permanent ban. Report violations with the username and relevant screenshots for prompt action.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_des_1">At Matcheron.com, we value the privacy and security of our users. This Privacy Policy outlines how we collect, use, and protect your personal information when you use our dating and soulmates match-up platform. By using Matcheron.com, you agree to the terms of this Privacy Policy.</string>
    <string name="privacy_des_2">1. Information We Collect We collect the following types of information:</string>
    <string name="privacy_des_3">1.1 Personal Information When you create an account on Matcheron.com, we may collect personal information, including but not limited to: Name Email address Gender Date of birth Location Photographs Profile information (bio, preferences, etc.)</string>
    <string name="privacy_des_4">1.2 Sensitive Personal Information We understand the sensitivity of some information you provide, such as sexual orientation, relationship preferences, and other details that may be considered sensitive. We only collect such information with your explicit consent and for the purpose of improving your matchmaking experience.</string>
    <string name="privacy_des_5">1.3 Automatically Collected Information When you interact with our platform, we may collect information automatically, such as: IP address Device information Browser type Location data Cookies and usage data</string>
    <string name="privacy_des_6">2. How We Use Your Information We use your information for the following purposes:</string>
    <string name="privacy_des_7">To create and manage your profile To connect you with other users based on compatibility To personalize your experience and provide relevant recommendations To improve our services and platform features To send communications related to our platform (e.g., updates, promotions, customer support) To detect and prevent fraudulent activity.</string>
    <string name="privacy_des_8">3. Sharing of Information We do not sell or rent your personal information to third parties. However, we may share your information in the following situations:</string>
    <string name="privacy_des_9">With your consent, when you opt to share information with other users (e.g., profile visibility) With service providers who assist us in operating the platform (e.g., hosting, analytics, payment processors) If required by law or legal processes (e.g., subpoenas, court orders) To protect our platform, users, or the public from harm or illegal activity.</string>
    <string name="privacy_des_10">4. Your Choices and Rights You have the following rights regarding your personal information:</string>
    <string name="privacy_des_11">4.1 Access and Correction You may access and update your personal information at any time by logging into your account settings.</string>
    <string name="privacy_des_12">4.2 Deletion You may request the deletion of your account and personal information by contacting us. We will delete your data unless we are required to retain it for legal or security reasons.</string>
    <string name="privacy_des_13">4.3 Privacy Settings You can control the visibility of your profile and personal information by adjusting your privacy settings within the platform.</string>
    <string name="privacy_des_14">5. Data Retention We retain your personal information for as long as your account is active or as necessary to provide our services. We may also retain information to comply with legal obligations, resolve disputes, or enforce agreements.</string>
    <string name="privacy_des_15">6. Data Security We take appropriate security measures to protect your personal information from unauthorized access, disclosure, or destruction. However, no method of transmission over the internet or electronic storage is 100% secure, so we cannot guarantee absolute security.</string>
    <string name="privacy_des_16">7. Children\'s Privacy Matcheron.com is intended for individuals 18 years and older. We do not knowingly collect personal information from children under 18. If you are a parent or guardian and believe we have collected information from a child, please contact us so we can take appropriate action.</string>
    <string name="privacy_des_17">8. Changes to This Privacy Policy We may update this Privacy Policy from time to time to reflect changes in our practices or legal requirements. We will notify users of significant changes by posting the updated policy on our platform or sending a notice via email. Your continued use of Matcheron.com after such changes indicates your acceptance of the updated policy.</string>
    <string name="privacy_des_18">9. Contact Us If you have any questions or concerns about this Privacy Policy or our data practices, please contact us.</string>
</resources>