<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Terms"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/dp_15">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:paddingVertical="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/bt_back"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@mipmap/ic_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/baloo2_semibold"
            android:text="@string/terms"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/sp_22" />
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_22"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_gravity="center_horizontal"
                android:text="@string/matcheron_app_terms_and_guidelines"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/term_des_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/no_hate_speech"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/authentic_profiles_only"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/real_profile_photos"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/respectful_communication"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/cordial_behavior"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/cultural_sensitivity"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/no_harassment"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/no_inappropriate_content"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_9"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/no_solicitation_or_spam"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_10"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/positive_engagement"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_11"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/reporting_violations"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_12"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/no_religious_insensitivity"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_13"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_and_safety"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_14"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/age_restrictions"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_15"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/no_political_agenda"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_semibold"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/violation_consequences"/>
            <TextView
                android:layout_marginBottom="@dimen/dp_15"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/term_des_17"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>