<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PrivacyPolicy"
    android:background="@color/white"
    android:fitsSystemWindows="true"
   >
    <RelativeLayout
        android:id="@+id/rl_top"
        android:padding="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/bt_back"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@mipmap/ic_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/baloo2_semibold"
            android:text="@string/privacy_policy"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/sp_22" />
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:paddingHorizontal="@dimen/dp_15"
        android:layout_below="@id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_des_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_des_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/privacy_des_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/privacy_des_4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/privacy_des_5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_des_6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/privacy_des_7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_des_8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/privacy_des_9"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_des_10"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/privacy_des_11"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/privacy_des_12"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:text="@string/privacy_des_13"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_des_14"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_des_15"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_des_16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_des_17"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:fontFamily="@font/baloo2_regular"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/privacy_des_18"
                android:layout_marginBottom="@dimen/dp_15"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>